# elworthy

./: .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
derivations/: gbm_malliavin_param.py
elworthy/: Cargo.toml  README.md
elworthy-codegen/: Cargo.toml  README.md
elworthy-codegen/src/: cache.rs  cpu.rs  disk_cache.rs  hash.rs  interp.rs  jit.rs  lib.rs  serial.rs  vec_jit.rs
elworthy-codegen/tests/: jit_vs_interp.proptest-regressions  jit_vs_interp.rs  vec_vs_scalar.rs
elworthy-diff/: Cargo.toml  README.md
elworthy-diff/src/: lib.rs
elworthy-expr/: Cargo.toml  README.md
elworthy-expr/src/: lib.rs
elworthy-py/: Cargo.toml
elworthy-py/src/: lib.rs
elworthy-py/tests/: test_smoke.py
elworthy-rt/: Cargo.toml  README.md
elworthy-rt/benches/: scalar_jit_vs_interp.rs
elworthy-rt/src/: from_paths.rs  lib.rs
elworthy-rt/tests/: bel_delta_regression.rs  benchmark.rs  end_to_end_from_paths.rs  pipeline.rs
elworthy-weight/: Cargo.toml  README.md
elworthy-weight/src/: lib.rs
elworthy/src/: main.rs
python/benchmarks/: bench_bel_delta.py  demo_digital_payoff_correctness.py
python/elworthy/: __init__.py
