[package]
name = "elworthy-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cranelift lowering of elworthy expression trees."

[dependencies]
elworthy-expr.workspace = true
thiserror.workspace = true
cranelift.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
libm.workspace = true

[features]
default = []
# Enable F64X4 (256-bit) SIMD backend. Requires an AVX2 host; callers
# should gate usage behind `cpu::has_avx2()` at runtime.
simd_avx2 = []

[dev-dependencies]
proptest = "1"
