[package]
name = "elworthy-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime kernel cache, SIMD RNG, and dispatch for elworthy."

[dependencies]
elworthy-expr.workspace = true
elworthy-codegen.workspace = true
elworthy-weight.workspace = true
elworthy-diff.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
rand_distr = "0.4"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "scalar_jit_vs_interp"
harness = false
