[package]
name = "elworthy-weight"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bismut-Elworthy-Li weight synthesis for elworthy."

[dependencies]
elworthy-expr.workspace = true
elworthy-diff.workspace = true
